--- a/css/icon.css
+++ b/css/icon.css
@@ -17,7 +17,7 @@
 
     padding: .1rem;
 
-    border: solid .5rem rgb(175, 155, 113);
+    border: solid .5rem rgb(133, 115, 55);
     border-radius: none;
     outline: none;
 }
@@ -36,4 +36,9 @@
 .food-icon:hover{
     width: 5.6rem;
     height: 5.6rem;
+}
+
+.true img{
+    background: linear-gradient(rgb(229, 199, 241),rgb(195, 119, 197));
+    border: solid .5rem rgb(110, 86, 156);
 }
